Main svc category user tests (#21)
* fix: add validation for from and size to AdminUserController

* fix: disable logs for old tests

* feat: add category tests

* feat: add user tests

* feat: add Formatter NullNotBlank and general tests

* fix: checkstyle

* fix: small checkstyle

* fix: add transactions and deleted repeating code

* fix: !!! deleted exception, add pre-check for unique name

* fix: integration tests + fixed tests for categories

* fix: deleted tests for LocalDataTime

* fix: fix tests for MapStruct

* fix: fix postman tests

* fix: fix checkstyle